--- a/02 - Introducao ao HTML/atividadeAula02.html
+++ b/02 - Introducao ao HTML/atividadeAula02.html
@@ -5,12 +5,17 @@
 
 <hr>
 
-<h1>Objetivo</h1>
+<h1><mark>Sobre</mark></h1>
+<p><i>Lorem</i> ipsum dolor sit amet consectetur adipisicing elit. Placeat ad temporibus mollitia obcaecati sit corporis enim asperiores, dolorem atque aliquam?</p>
+<hr>
+
+<h1><mark>Objetivo</mark></h1>
 <p>Desejo fazer parte do time da empresa, fazendo meu melhor.</p>
 <hr>
-<h1>Formação</h1>
+<h1><mark>Formação</mark></h1>
 <h4> Janeiro/2022</h4>
-<p>Ensino Médio, Colégio Alfa</p>
+<ul>
+    <li>Ensino Médio, Colégio Alfa</li></ul>
 <hr>
-<h1>Habilidade</h1>
+<h1><mark>Habilidade</mark></h1>
 <p>Compreensão alta em inglês</p>
