--- a/02 - Introducao ao HTML/atividadeAula02.html
+++ b/02 - Introducao ao HTML/atividadeAula02.html
@@ -6,7 +6,7 @@
 <hr>
 
 <h1><mark>Sobre</mark></h1>
-<p><i>Lorem</i> ipsum dolor sit amet consectetur adipisicing elit. Placeat ad temporibus mollitia obcaecati sit corporis enim asperiores, dolorem atque aliquam?</p>
+<p><i>Lorem</i> ipsum dolor sit amet consectetur adipisicing elit. Placeat ad temporibus mollitia obcaecati <b>sit</b> corporis enim asperiores, dolorem atque aliquam?</p>
 <hr>
 
 <h1><mark>Objetivo</mark></h1>
