--- a/02 - CSS/introducao_css.html
+++ b/02 - CSS/introducao_css.html
@@ -9,24 +9,31 @@
             font-size: 24pt;
             color: white;
         }*/
-        p{
-            background-color: cadetblue;
-        }
         #paragrafo_especial{
             font-size: 24pt;
-            color: white;
+            color: black;
         }
         .paragrafos{
             font-size: 20pt;
-            color: lightskyblue;
             font-weight: 900;
         }
+        #paragrafo-teste{
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 26px;
+            font-weight: 700;
+            font-style: italic;
+            text-align: start;
+            text-decoration: line-through;
+            text-indent: 30px;
+            text-transform: uppercase;
+        }
+        
     </style>
 </head>
 <body>
     <!--<p style="color: red; font-size: 30pt;">Texto</p>-->
     <p class="paragrafos">Meu primeiro parágrafo</p>
-    <p>Meu segundo parágrafo</p>
+    <p id="paragrafo-teste">Meu segundo paragrafo</p>
     <p id="paragrafo_especial">Meu terceiro parágrafo</p>
     <p>Meu primeiro parágrafo</p>
     <p class="paragrafos">Meu primeiro parágrafo</p>
