--- a/02 - CSS/03 - Imagens/atividade-curriculo/curriculo-vitae.html
+++ b/02 - CSS/03 - Imagens/atividade-curriculo/curriculo-vitae.html
@@ -22,9 +22,7 @@
         >linkedin</a
       >
     </p>
-    <img  class="imagem-curriculo" src="imagens/Slime_JE3_BE2.webp">
-
-
+    <img class="imagem-curriculo" src="imagens/Slime_JE3_BE2.webp" />
     <hr />
 
     <h2 class="titulo2">Sobre</h2>
@@ -75,11 +73,12 @@
     <hr />
     <h2 class="titulo2">Habilidade</h2>
     <ul>
-        <li>Compreensão em inglês</li>
-        <li>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui
-      aliquid, obcaecati perferendis pariatur velit adipisci magni libero
-      voluptatibus laudantium.</li>
-</ul>
+      <li>Compreensão em inglês</li>
+      <li>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo qui
+        aliquid, obcaecati perferendis pariatur velit adipisci magni libero
+        voluptatibus laudantium.
+      </li>
+    </ul>
   </body>
 </html>
