--- a/02 - CSS/06 - flex-box/layout2.html
+++ b/02 - CSS/06 - flex-box/layout2.html
@@ -56,6 +56,34 @@
             align-items: center;
             gap: 10px;
         }
+        .flex-container8 div{
+            flex-basis: 150px;
+            background-color: lightcyan;
+        }
+        .flex-container8 .div3{
+            background-color: lightgoldenrodyellow;
+            flex-shrink: 2;
+        }
+        .flex-container8{
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+        }
+        .flex-container9 div{
+            background-color: lightgreen;
+        }
+        .flex-container9 .div2{
+            order: 2;
+            align-self: center;
+        }
+        .flex-container9 .div3{
+            order: -1;
+            align-self: flex-end;
+        }
+        .flex-container9 .div1{
+            align-self: flex-start;
+        }
+        
     </style>
 </head>
 <body>
@@ -72,6 +100,18 @@
         <div class="div4">DIV4</div>
     </div>
     <div class="flexbox flex-container7">
+        <div class="div1">DIV1</div>
+        <div class="div2">DIV2</div>
+        <div class="div3">DIV3</div>
+        <div class="div4">DIV4</div>
+    </div>
+
+    <div class="flexbox flex-container8">
+        <div class="div1">DIV1</div>
+        <div class="div2">DIV2</div>
+        <div class="div3">DIV3</div>
+        <div class="div4">DIV4</div>
+    </div> <div class="flexbox flex-container9">
         <div class="div1">DIV1</div>
         <div class="div2">DIV2</div>
         <div class="div3">DIV3</div>
