--- a/02 - CSS/07 - Unidades de Medida/curriculo.html
+++ b/02 - CSS/07 - Unidades de Medida/curriculo.html
@@ -25,6 +25,7 @@
 
     </header>
     <main>
+
       <div class="flex-box flex-container">
         <div class="flex-box flex-container">
           <div class="classe-informacoes-contato">
@@ -45,6 +46,7 @@
         </div>
       </div>
       <hr />
+      <article>
       <section>
       <h2 class="titulo2">Sobre</h2>
       <p class="textos-longos">
@@ -53,7 +55,8 @@
         dolorem atque aliquam?
       </p>
       <hr />
-
+      </section>
+      <section>
       <h2 class="titulo2">Objetivo</h2>
       <p class="textos-longos">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
@@ -82,6 +85,8 @@
         dolor?
       </p>
       <hr />
+      </section>
+      <section>
       <h2 class="titulo2">Formação</h2>
       <h3 id="subtituloFormacao">Janeiro/2022</h3>
       <ol>
@@ -93,6 +98,8 @@
         <li>Lorem ipsum dolor sit amet.</li>
       </ol>
       <hr />
+      </section>
+      <section>
       <h2 class="titulo2">Habilidade</h2>
       <ul>
         <li>Lorem, ipsum.</li>
@@ -103,6 +110,7 @@
         </li>
       </ul>
       </section>
+      </article>
     </main>
   </body>
 </html>
